metadata-service/k8/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metadata-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: ""
spec:
  rules:
  - host: cloud.sdu.dk
    http:
      paths:
      - path: /api/metadata
        backend:
          serviceName: metadata
          servicePort: 8080
      - path: /api/projects
        backend:
          serviceName: metadata
          servicePort: 8080
